Finish ca implementation, agvs leave the graph after reach goals