@@ -3,16 +3,22 @@ package virtualEnvironment;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.SortedMap;
 import java.util.Stack;
+import java.util.TreeMap;
 
+import org.apache.commons.lang3.time.FastDatePrinter;
 import org.apache.commons.math3.random.RandomGenerator;
+import org.eclipse.swt.internal.theme.Theme;
 
 import com.github.rinde.rinsim.core.model.road.CollisionGraphRoadModel;
 import com.github.rinde.rinsim.core.model.time.TickListener;
 import com.github.rinde.rinsim.core.model.time.TimeLapse;
+import com.github.rinde.rinsim.geom.Graphs;
 import com.github.rinde.rinsim.geom.Point;
 import com.google.common.collect.Range;
 
+import ch.qos.logback.core.pattern.parser.Node;
 import dmasForRouting.AGVSystem;
 import pathSampling.Path;
 import pathSampling.PathSampling;
@@ -41,6 +47,9 @@ public class VirtualEnvironment implements TickListener {
   /** The list of points in the central station. */
   private List<Point> centralStation;
   
+  /** The road model. */
+  private CollisionGraphRoadModel roadModel;
+  
   /**
    * Instantiates a new virtual environment.
    *
@@ -53,6 +62,7 @@ public class VirtualEnvironment implements TickListener {
     nodeAgentList = new NodeAgentList(roadModel);
     edgeAgentList = new EdgeAgentList(roadModel);
     this.centralStation = centralStation;
+    this.roadModel = roadModel;
   }
   
   /**
@@ -62,115 +72,127 @@ public class VirtualEnvironment implements TickListener {
    * @param startTime the start time
    * @param origin the origin
    * @param destination the destination
-   * @param numOfPaths the num of paths
-   * @param state the state
    * @return the plan
    */
   public Plan exploreRoute(int agvID, long startTime, Point origin,
-      Point destination, int numOfPaths, State state) {
-    
-    // sampling the environment to get several feasible paths
-    final List<Path> feasiblePaths = PathSampling.getFeasiblePaths(origin,
-        destination, numOfPaths, centralStation, state);
-    final List<PlanFTW> feasiblePlans = new ArrayList<>();
-    
-    for (Path path : feasiblePaths) {
-      final List<Point> candPath = path.getPath();
+      Point destination) {
 
-      // free time window of the start node
-      final List<FreeTimeWindow> firstFreeTimeWindows = nodeAgentList
-          .getNodeAgent(candPath.get(0))
-          .getFreeTimeWindows(Range.atLeast(startTime), agvID);
-      
-      FreeTimeWindow startFTW = null;
-      
-      // there should be only one free time window that contains the startTime
-      final long realStartTime = startTime - ((long) (AGVSystem.VEHICLE_LENGTH*1000 / AGVSystem.VEHICLE_SPEED));
-      for (FreeTimeWindow ftw : firstFreeTimeWindows) {
-        if (ftw.getEntryWindow().contains(realStartTime)
-            || ftw.getEntryWindow().lowerEndpoint() == realStartTime) {
-          startFTW = ftw;
-          break;
-        }
-      }
-      
-      // if no possible free time window then next candidate path
-      if (startFTW == null) {
-        continue;
-      }
-      
-      LinkedList<FreeTimeWindow> firstFTW = new LinkedList<>();
-      firstFTW.addLast(startFTW);
-      
-      Stack<PlanFTW> planStack = new Stack<>();
-      planStack.push(new PlanFTW(firstFTW, candPath));
-      
-      while (!planStack.isEmpty()) {
-        final PlanFTW plan = planStack.pop();
-        final LinkedList<FreeTimeWindow> currentFTWs = plan.getFreeTimeWindows();
-        final int planLength = currentFTWs.size();
-        
-        // if all the resources have been planned
-        if (planLength == (2*candPath.size() - 1)) {
-          feasiblePlans.add(plan);
-          continue;
-        }
+    // free time window of the start node
+    final List<FreeTimeWindow> firstFreeTimeWindows = nodeAgentList
+        .getNodeAgent(origin)
+        .getFreeTimeWindows(Range.atLeast(startTime), agvID);
 
-        // list of next feasible free time windows
-        List<FreeTimeWindow> nextFTWs;
-        // check whether the last plan step is for a node or for an edge
-//        System.out.println(agvID);
-        if (planLength % 2 == 1) {
-          // the last plan step is for a node. Now we plan for the next edge
-          final int index = planLength / 2;
+    FreeTimeWindow startFTW = null;
+
+    // there should be only one free time window that contains the startTime
+    final long realStartTime = startTime
+        - ((long) (AGVSystem.VEHICLE_LENGTH * 1000 / AGVSystem.VEHICLE_SPEED));
+    for (FreeTimeWindow ftw : firstFreeTimeWindows) {
+      if (ftw.getEntryWindow().contains(realStartTime)
+          || ftw.getEntryWindow().lowerEndpoint() == realStartTime) {
+        startFTW = ftw;
+        break;
+      }
+    }
+
+    // if no possible free time window then it is an error
+    if (startFTW == null) {
+      throw new Error("No free time window for the first node!");
+    }
+
+    List<Point> firstPath = new ArrayList<>();
+    firstPath.add(origin);
+    LinkedList<FreeTimeWindow> firstFTW = new LinkedList<>();
+    firstFTW.addLast(startFTW);
+
+    PlanFTW firstPlanFTW = new PlanFTW(firstFTW, firstPath);
+
+    final SortedMap<Long, PlanFTW> planQueue = new TreeMap<>();
+    planQueue.put(computeCost(firstPlanFTW, destination), firstPlanFTW);
+
+    PlanFTW finalPlan = null;
+
+    // TODO we still need a closed list here
+
+    while (!planQueue.isEmpty()) {
+      // select and remove the first plan in the queue
+      final PlanFTW planFTW = planQueue.remove(planQueue.firstKey());
+
+      final List<Point> path = planFTW.getPath();
+      final List<FreeTimeWindow> ftwList = planFTW.getFreeTimeWindows();
+
+      if (path.get(path.size() - 1).equals(destination) && ftwList.size() % 2 == 1) {
+        // if reached the destination then break
+        finalPlan = planFTW;
+        break;
+      }
+
+      if (ftwList.size() % 2 == 1) {
+        // if the last plan step is for a node
+        // get all possible next node
+        final List<Point> nextNodes = new ArrayList<>();
+        nextNodes.addAll(roadModel.getGraph()
+            .getOutgoingConnections(path.get(path.size() - 1)));
+        for (Point nextNode : nextNodes) {
+          // for each possible next node
+          if (path.contains(nextNode)) {
+            // we do not allow cyclic plan
+            continue;
+          }
+          // now we get the free time window of the edge
+          // call the edge agent
           final EdgeAgent edgeAgent = edgeAgentList
-              .getEdgeAgent(candPath.get(index), candPath.get(index + 1));
-          nextFTWs = edgeAgent.getFreeTimeWindows(candPath.get(index),
-              candPath.get(index + 1), currentFTWs.getLast().getExitWindow(),
-              agvID);
-//          System.out.println("edge" + candPath.get(index) + " " + candPath.get(index + 1) + " " + currentFTWs.getLast().getExitWindow());
-        } else {
-          // the last plan step is for an edge. Now we plan for the next node
-          final int index = planLength / 2;
-          final NodeAgent nodeAgent = nodeAgentList
-              .getNodeAgent(candPath.get(index));
-          nextFTWs = nodeAgent
-              .getFreeTimeWindows(currentFTWs.getLast().getExitWindow(), agvID);
-//          System.out.println("node" + candPath.get(index));
+              .getEdgeAgent(path.get(path.size() - 1), nextNode);
+          List<FreeTimeWindow> nextFTWs = edgeAgent.getFreeTimeWindows(
+              path.get(path.size() - 1), nextNode,
+              ftwList.get(ftwList.size() - 1).getExitWindow(), agvID);
+          final List<Point> newPath = new ArrayList<>(path);
+          newPath.add(nextNode);
+          for (FreeTimeWindow newFTW : nextFTWs) {
+            LinkedList<FreeTimeWindow> newListOfFTWs = new LinkedList<>(
+                ftwList);
+            newListOfFTWs.addLast(newFTW);
+            PlanFTW newPlanFTW = new PlanFTW(newListOfFTWs, newPath);
+            // add next plan step to the queue
+            // solve problem when have the same cost
+            long estimatedCost = computeCost(newPlanFTW, destination);
+            while (planQueue.containsKey(estimatedCost)) {
+              estimatedCost++;
+            }
+            planQueue.put(estimatedCost, newPlanFTW);
+          }
         }
-        
-        if (nextFTWs == null) {
-          continue;
+      } else {
+        // if the last plan step is for an edge
+        // call the node agent
+        final NodeAgent nodeAgent = nodeAgentList
+            .getNodeAgent(path.get(path.size() - 1));
+        List<FreeTimeWindow> nextFTWs = nodeAgent.getFreeTimeWindows(
+            ftwList.get(ftwList.size() - 1).getExitWindow(), agvID);
+        for (FreeTimeWindow newFTW : nextFTWs) {
+          LinkedList<FreeTimeWindow> newListOfFTWs = new LinkedList<>(ftwList);
+          newListOfFTWs.addLast(newFTW);
+          getClass();
+          PlanFTW newPlanFTW = new PlanFTW(newListOfFTWs, path);
+          long estimatedCost = computeCost(newPlanFTW, destination);
+          while (planQueue.containsKey(estimatedCost)) {
+            estimatedCost++;
+          }
+          planQueue.put(estimatedCost, newPlanFTW);
         }
+      }
+    }
 
-        for (FreeTimeWindow ftw : nextFTWs) {
-          final LinkedList<FreeTimeWindow> newFtwList = new LinkedList<>(
-              currentFTWs);
-          newFtwList.addLast(ftw);
-          planStack.push(new PlanFTW(newFtwList, candPath));
-        }
-      }
-    }
-    
-    // find the best plan (the one that the AGV arrives at destination earliest)
-    PlanFTW bestPlan = null;
-    for (PlanFTW planFTW : feasiblePlans) {
-      if (bestPlan == null
-          || bestPlan.getArrivalTime() > planFTW.getArrivalTime()) {
-        bestPlan = planFTW;
-      }
-    }
-    
     // generate actual plan from the time window plan
     final LinkedList<Range<Long>> intervals = new LinkedList<>();
-    final List<FreeTimeWindow> freeTimeWindows = bestPlan.getFreeTimeWindows();
+    final List<FreeTimeWindow> freeTimeWindows = finalPlan.getFreeTimeWindows();
     final FreeTimeWindow lastFreeTimeWindow = freeTimeWindows
         .get(freeTimeWindows.size() - 1);
-    
+
     intervals.addFirst(
         Range.closed(lastFreeTimeWindow.getEntryWindow().lowerEndpoint(),
             lastFreeTimeWindow.getExitWindow().lowerEndpoint()));
- 
+
     for (int i = freeTimeWindows.size() - 2; i >= 0; i--) {
       intervals.addFirst(
           Range.closed(freeTimeWindows.get(i).getEntryWindow().lowerEndpoint(),
@@ -178,13 +200,54 @@ public class VirtualEnvironment implements TickListener {
                   + ((long) (AGVSystem.VEHICLE_LENGTH * 1000
                       / AGVSystem.VEHICLE_SPEED))));
     }
-    
-    Plan plan = new Plan(bestPlan.getPath(), intervals);
-    
+
+    Plan plan = new Plan(finalPlan.getPath(), intervals);
+
     return plan;
   }
   
+  /**
+   * Compute cost.
+   *
+   * @param planFTW the plan ftw
+   * @param destination the destination
+   * @return the cost
+   */
+  public long computeCost(PlanFTW planFTW, Point destination) {
+    final List<Point> path = planFTW.getPath();
+    final List<FreeTimeWindow> ftwList = planFTW.getFreeTimeWindows();
+    
+    long estimatedCost = -1;
+    
+    // the shortest path from the last node of the plan
+    final List<Point> nextShortestPath = getShortestPath(
+        path.get(path.size() - 1), destination);
+    // calculate the length of the shortest path
+    final double lengthShortestPath = Graphs.pathLength(nextShortestPath);
+    final long earliestExitTime = planFTW.getEarliestExitTime();
+    
+    if (ftwList.size() % 2 == 1) {
+      // if the plan stop at a node (note that the exit time is the time when
+      // the vehicle is completely out of the node
+      estimatedCost = earliestExitTime
+          + ((long) (lengthShortestPath * 1000 / AGVSystem.VEHICLE_SPEED))
+          - ((long) (AGVSystem.VEHICLE_LENGTH * 1000
+              / AGVSystem.VEHICLE_SPEED));
+    } else {
+      // if the plan stop at an edge, the exit time is the time when the vehicle
+      // is exactly at the central of the next node
+      estimatedCost = earliestExitTime
+          + ((long) (lengthShortestPath * 1000 / AGVSystem.VEHICLE_SPEED));
+    }
+    
+    return estimatedCost;
+  }
   
+  public List<Point> getShortestPath(Point origin, Point destination) {
+    return Graphs.shortestPathEuclideanDistance(roadModel.getGraph(), origin,
+        destination);
+  }
+
   /**
    * Make reservation.
    *
